# be25-fin-thanos-meetbowl-ai

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: container.py  main.py
app/consumers/: redis_feedback.py
app/core/: config.py  errors.py  model_profiles.py
app/events/: idempotency.py  mapper.py  rabbit.py
app/pipelines/: chunking.py  tiptap.py  transcript.py
app/ports/: chat_provider.py  context_loader.py  embedding.py  embedding_provider.py  generation.py  llm_provider.py  reranker.py  vector_store.py
app/prompts/: chat.py  minutes.py
app/providers/: embedding_router.py  fake_chat.py  fake_context_loader.py  fake_embedding.py  fake_generation.py  fake_llm.py  fake_reranker.py  gemini_embedding.py  gemini_generation.py  gemini_llm.py  gemini_qdrant_chat.py  gemini_reranker.py  openai_embedding.py  pydantic_ai_chat.py  structured_generation_router.py
app/rag/: __init__.py  access_filter.py  chunking.py  feedback_access_filter.py  (+5 more)
docs/: api-spec.md  architecture.md  conventions.md
tests/: test_chat_access_filter.py  test_chat_api.py  test_chat_history_context.py  test_chat_privacy.py  test_chat_translator.py  test_chunking.py  test_document_index_workflow.py  test_feature_coexistence.py  test_gemini_provider.py  test_gemini_rag_e2e.py  test_generation_profile_router.py  test_indexing.py  test_minutes_api.py  test_minutes_workflow.py  test_openai_embedding_provider.py  test_qdrant_chat_retriever.py  test_rabbit_document_index.py  test_rabbit_minutes.py  test_rag_e2e.py  test_reranker.py  test_schemas.py  test_tiptap_converter.py
(+21 files in other folders)
