[project]
name = "meetbowl-ai"
version = "0.1.0"
description = "AI API server for Meetbowl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.0",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
